--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "placemark-svelte",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
     "vite": "^2.9.9"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "svelte-spa-router": "^3.2.0"
   }
 }
