--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "placemark-svelte",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "leaflet": "^1.8.0",
     "svelte-spa-router": "^3.2.0"
   }
 }
