--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "placemark-svelte",
   "private": true,
-  "version": "0.4.0",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "leaflet": "^1.8.0",
+    "svelte-frappe-charts": "^1.9.2",
     "svelte-spa-router": "^3.2.0"
   }
 }
