--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "leaflet": "^1.8.0",
     "svelte-frappe-charts": "^1.9.2",
+    "svelte-image-gallery": "^1.5.0",
     "svelte-spa-router": "^3.2.0"
   }
 }
